[image_analysis,shenker/image_analysis] Major improvement to mosaic animation. Now we do colorization after blurring, warping, and combining all input images for a given color channel. We use dask.array to do the combining. This all results in a large performance increase, though I have not done careful benchmarking.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220830 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220830 Mosaic animation.ipynb
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.adapt(maximum=500)"
+    "cluster.adapt(maximum=100)"
    ]
   },
   {
@@ -208,79 +208,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = nd2.get_frame_2D(t=80, v=0, c=nd2.metadata[\"channels\"].index(\"YFP-DUAL\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_scaled = scaling_funcs[\"YFP-DUAL\"](img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_scaled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = nd2.get_frame_2D(t=10, v=0, c=nd2.metadata[\"channels\"].index(\"RFP-Penta\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_scaled = scaling_funcs[\"RFP-Penta\"](img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(img_scaled)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.geomspace(20, 0.05, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "num_t = nd2.sizes[\"t\"]\n",
-    "scale = it.repeat(20)\n",
-    "#scale = it.repeat(0.1)\n",
+    "#scale = it.repeat(20)\n",
+    "scale = it.repeat(0.1)\n",
     "#scale = it.repeat(0.4)\n",
     "#scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
     "# timepoints = range(0, 119, 30)\n",
     "# timepoints = range(0, 110, 10)#[20,40,60]\n",
-    "timepoints = [20]\n",
-    "#timepoints = range(num_t)\n",
+    "timepoints = [20]#[20,40,60,80]\n",
+    "timepoints = range(num_t)\n",
     "#timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
     "offset = np.array([600, 400])\n",
     "animation_delayed = mosaic.mosaic_animate_scale(\n",
@@ -301,8 +238,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%pyinstrument\n",
+    "a = dask.compute(animation_delayed, scheduler=\"sync\")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
-    "a = dask.compute(animation_delayed)[0]"
+    "a = dask.compute(animation_delayed[0], scheduler=\"sync\")"
    ]
   },
   {
@@ -322,6 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "a = client.gather(animation_future)"
    ]
   },
@@ -360,7 +308,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "export_video(a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoom.mp4\", fps=10)"
+    "mosaic.export_video(a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_10x10.mp4\", fps=10)"
    ]
   },
   {
@@ -370,15 +318,6 @@
    "outputs": [],
    "source": [
     "Video(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_3x3_5fps.mp4\", embed=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p"
    ]
   },
   {
