[image_analysis,shenker/image_analysis] WIP mosaic animation. ndi.gaussian_filter is fastest blur for sigma<4, not sure why.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220906 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220906 Mosaic animation.ipynb
@@ -208,6 +208,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "(50 - 1) / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(10 - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "num_t = nd2.sizes[\"t\"]\n",
     "#scale = it.repeat(20)\n",
@@ -217,7 +235,7 @@
     "# timepoints = range(0, 119, 30)\n",
     "# timepoints = range(0, 110, 10)#[20,40,60]\n",
     "timepoints = [20]#[20,40,60,80]\n",
-    "timepoints = range(num_t)\n",
+    "#timepoints = range(num_t)\n",
     "#timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
     "offset = np.array([600, 400])\n",
     "animation_delayed = mosaic.mosaic_animate_scale(\n",
@@ -238,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%pyinstrument\n",
+    "#%%pyinstrument\n",
     "a = dask.compute(animation_delayed, scheduler=\"sync\")[0]"
    ]
   },
@@ -248,8 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "a = dask.compute(animation_delayed[0], scheduler=\"sync\")"
+    "(1 / np.array([0.1,0.4,1,1/49]) - 1) / 2"
    ]
   },
   {
@@ -289,6 +306,217 @@
    "outputs": [],
    "source": [
     "client.gather([a for a in animation_future if a.status == \"error\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:]) #/16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:]) #/8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:]) #/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:]) #noaa, order=3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:]) #noaa, order=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:]) #noaa, order=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((a[0])[800:,:]) #aa1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((aa0)[800:,:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((aa2)[800:,:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow((aa4)[800:,:200])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa2 = a[0]\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0]) # aa4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0]) # aa2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0]) # aa1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0]) # 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0])"
    ]
   },
   {
