--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220906 Blur benchmark.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220906 Blur benchmark.ipynb
@@ -8,12 +8,15 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import scipy.ndimage as ndi\n",
     "import holoviews as hv\n",
+    "import hvplot.pandas\n",
     "import matplotlib.pyplot as plt\n",
     "import nd2reader\n",
     "import skimage\n",
     "import numba\n",
+    "from tqdm.auto import tqdm\n",
     "import timeit"
    ]
   },
@@ -79,7 +82,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "blur_funcs = [ndi.gaussian_filter, blur.scipy_box_blur_2d, blur.scipy_box_blur, blur.numba_stack_blur]"
+    "blur_funcs = [\"ndi.gaussian_filter\", \"blur.scipy_box_blur_2d\", \"blur.scipy_box_blur\", \"blur.numba_stack_blur\"]\n",
+    "#sigmas = np.concatenate((np.linspace(0.1, 3, 5), np.linspace(4, 50, 5)))\n",
+    "#sigmas = [1,3,5,10,25,50]\n",
+    "sigmas = np.concatenate((np.arange(1, 10), np.arange(10, 50, 5)))\n",
+    "kwargs = {\"mode\": \"nearest\"}"
    ]
   },
   {
@@ -117,33 +124,113 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69126d38-bb22-45c9-930a-db2e9b33d532",
+   "id": "c0e429be-a028-4ae7-a31e-9b77a1eabcc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(blur.scipy_box(img, 10))"
+    "%%time\n",
+    "rows = []\n",
+    "for sigma in tqdm(sigmas):\n",
+    "    ref = None\n",
+    "    for func_name in tqdm(blur_funcs, leave=False):\n",
+    "        eval_str = f\"{func_name}(img2, sigma, **kwargs)\"\n",
+    "        img2 = img.copy()\n",
+    "        blurred = eval(eval_str, globals())\n",
+    "        t = timeit.Timer(eval_str, setup=\"img2 = img.copy()\", globals=globals()).timeit(10)\n",
+    "        if ref is None:\n",
+    "            ref = blurred\n",
+    "            rms = 0\n",
+    "        else:\n",
+    "            rms = np.sqrt(((blurred - ref)**2).sum())\n",
+    "        rows.append((func_name, sigma, t, rms))\n",
+    "df = pd.DataFrame(rows, columns=[\"function\", \"sigma\", \"t\", \"rms\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "908bf026-353b-4f67-a03c-91bd3bee82aa",
+   "id": "ed198f72-61d3-4af3-89fa-8631564bdfae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "img.shape"
+    "df.hvplot.scatter(\"sigma\", \"t\", by=\"function\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ff26ec8-34b4-4e5d-827d-776d92d078b3",
+   "metadata": {},
+   "source": [
+    "# Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d47ad5c6-c25d-496c-8afb-d490d6946845",
+   "metadata": {},
+   "source": [
+    "# Accuracy matrix"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a9728e7-a3d6-4df5-a48d-c0d271be7d25",
+   "id": "596e52f0-3045-4abe-b4c2-d6f94d4b982e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "019b3384-e373-4b68-b448-0d7c76e01fe2",
+   "metadata": {},
+   "source": [
+    "# Auxiliary benchmarks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "214378ec-38a9-425b-94d9-92a29bcad80c",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdc1ad15-81fa-4f9e-89f6-8a1caabab780",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(blur.scipy_box_transpose(img, 10))"
+    "%%pyinstrument\n",
+    "ndi.gaussian_filter(img, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51076758-73a0-4434-bd13-5e16b611e635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%pyinstrument\n",
+    "img2 = img.copy()\n",
+    "for i in range(5):\n",
+    "    #ndi.gaussian_filter(img, 1)\n",
+    "    blur.scipy_box_blur(img, 1, output=img2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b506ae4a-d8ce-41e9-8aa2-170b949726d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timeit.Timer(\"sb(img2, 10)\", setup=\"img2 = img.copy()\", globals=globals()).timeit(100)"
    ]
   },
   {
@@ -174,50 +261,6 @@
    "outputs": [],
    "source": [
     "timeit.Timer(\"blur.scipy_box_blur(img, 10)\", globals=globals()).timeit(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2ff26ec8-34b4-4e5d-827d-776d92d078b3",
-   "metadata": {},
-   "source": [
-    "# Performance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d47ad5c6-c25d-496c-8afb-d490d6946845",
-   "metadata": {},
-   "source": [
-    "# Accuracy matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "596e52f0-3045-4abe-b4c2-d6f94d4b982e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "214378ec-38a9-425b-94d9-92a29bcad80c",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b506ae4a-d8ce-41e9-8aa2-170b949726d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "timeit.Timer(\"sb(img2, 10)\", setup=\"img2 = img.copy()\", globals=globals()).timeit(100)"
    ]
   }
  ],
