--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220906 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220906 Mosaic animation.ipynb
@@ -20,6 +20,7 @@
     "import nd2reader\n",
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
     "from cytoolz import partial\n",
     "import itertools as it\n",
     "from pathlib import Path\n",
@@ -38,7 +39,8 @@
    "outputs": [],
    "source": [
     "from dask.diagnostics import ProgressBar\n",
-    "pbar = ProgressBar()                \n",
+    "\n",
+    "pbar = ProgressBar()\n",
     "pbar.register()"
    ]
   },
@@ -96,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#default_channels = (\"YFP-DUAL\", \"RFP-Penta\")\n",
+    "# default_channels = (\"YFP-DUAL\", \"RFP-Penta\")\n",
     "default_channels = (\"YFP-DUAL\", \"RFP-PENTA\")\n",
     "channel_to_color = {\n",
     "    \"BF\": \"#ffffff\",\n",
@@ -116,7 +118,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask.config.set({'distributed.scheduler.allowed-failures': 10})"
+    "font = ImageFont.truetype(\"fira/FiraSans-Medium.ttf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask.config.set({\"distributed.scheduler.allowed-failures\": 10})"
    ]
   },
   {
@@ -128,7 +139,7 @@
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
     "    walltime=\"03:00:00\",\n",
-    "    memory=\"6GB\",\n",
+    "    memory=\"4GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    log_directory=\"/home/jqs1/log\",\n",
     "    cores=1,\n",
@@ -152,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.adapt(maximum=100)"
+    "cluster.adapt(maximum=300)"
    ]
   },
   {
@@ -199,25 +210,20 @@
    "outputs": [],
    "source": [
     "scaling_funcs = mosaic.get_scaling_funcs(extrema)\n",
-    "#scaling_funcs = get_scaling_funcs({\"YFP-DUAL\": (262, 8000), \"RFP-Penta\": (278, 8000)})"
+    "# scaling_funcs = get_scaling_funcs({\"YFP-DUAL\": (262, 8000), \"RFP-Penta\": (278, 8000)})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "(50 - 1) / 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(10 - 1)"
+    "o = square_overlay(a[0], 0, 20, font=font)\n",
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(o)"
    ]
   },
   {
@@ -228,16 +234,17 @@
    "source": [
     "%%time\n",
     "num_t = nd2.sizes[\"t\"]\n",
-    "#scale = it.repeat(20)\n",
-    "scale = it.repeat(0.1)\n",
-    "#scale = it.repeat(0.4)\n",
-    "#scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
+    "#scale = [80,40,20,10,5,1]#it.repeat(80)\n",
+    "scale = np.geomspace(80, 0.4, 100)\n",
+    "# scale = it.repeat(0.1)\n",
+    "# scale = it.repeat(0.4)\n",
+    "# scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
     "# timepoints = range(0, 119, 30)\n",
     "# timepoints = range(0, 110, 10)#[20,40,60]\n",
-    "timepoints = [20]#[20,40,60,80]\n",
-    "#timepoints = range(num_t)\n",
-    "#timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
-    "offset = np.array([600, 400])\n",
+    "timepoints = it.repeat(20)#[20]  # [20,40,60,80]\n",
+    "# timepoints = range(num_t)\n",
+    "# timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
+    "offset = np.array([604, 354])\n",
     "animation_delayed = mosaic.mosaic_animate_scale(\n",
     "    nd2_filename,\n",
     "    scale,\n",
@@ -246,6 +253,7 @@
     "    offset=offset,\n",
     "    channels=default_channels,\n",
     "    channel_to_color=channel_to_color,\n",
+    "    overlay_func=partial(square_overlay, unit_scale=80, unit_width=0.5, font=font),\n",
     "    delayed=True,\n",
     ")"
    ]
@@ -266,7 +274,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(1 / np.array([0.1,0.4,1,1/49]) - 1) / 2"
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = Image.new(\"RGBA\", (1024, 1024), (0, 0, 0, 255))\n",
+    "\n",
+    "fnt = ImageFont.truetype(\"fira/FiraSans-Medium.ttf\", 80)\n",
+    "d = ImageDraw.Draw(img)\n",
+    "\n",
+    "d.text((120, 900), \"1 cell\", font=fnt, fill=(255, 255, 255, 0))\n",
+    "d.rectangle([(100, 100), (1000, 1000)], outline=(255, 255, 255, 0), width=5)\n",
+    "plt.imshow(np.asarray(img))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = Image.fromarray(a[0], mode=\"F\")\n",
+    "draw = ImageDraw.Draw(img)\n",
+    "draw.line((0, 0) + im.size, fill=128)"
    ]
   },
   {
@@ -276,7 +312,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "#animation_future = client.compute(animation_delayed)\n",
+    "# animation_future = client.compute(animation_delayed)\n",
     "animation_future = [client.compute(a) for a in tqdm(animation_delayed)]"
    ]
   },
@@ -315,217 +351,6 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:]) #/16"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:]) #/8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:]) #/4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:]) #noaa, order=3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:]) #noaa, order=2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:]) #noaa, order=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((a[0])[800:,:]) #aa1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((aa0)[800:,:200])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((aa2)[800:,:200])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow((aa4)[800:,:200])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aa2 = a[0]\n",
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0]) # aa4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0]) # aa2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0]) # aa1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0]) # 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
     "plt.imshow(a[0])"
    ]
   },
@@ -536,7 +361,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "mosaic.export_video(a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_10x10.mp4\", fps=10)"
+    "mosaic.export_video(\n",
+    "    a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoomtest_1.mp4\", fps=10\n",
+    ")"
    ]
   },
   {
@@ -545,7 +372,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Video(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_3x3_5fps.mp4\", embed=True)"
+    "Video(\n",
+    "    \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_3x3_5fps.mp4\",\n",
+    "    embed=True,\n",
+    ")"
    ]
   },
   {
@@ -762,7 +592,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "rescaled_frames = [skimage.transform.rescale(f, 0.5, anti_aliasing=True, channel_axis=-1) for f in tqdm(frames)]"
+    "rescaled_frames = [\n",
+    "    skimage.transform.rescale(f, 0.5, anti_aliasing=True, channel_axis=-1)\n",
+    "    for f in tqdm(frames)\n",
+    "]"
    ]
   },
   {
@@ -808,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
