[shenker/image_analysis,image_analysis] Powers of ten overlay seems to work. Looks good.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220907 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220907 Mosaic animation.ipynb
@@ -221,7 +221,7 @@
    },
    "outputs": [],
    "source": [
-    "o = square_overlay(a[0], 0, 20, font=font)\n",
+    "o = mosaic.square_overlay(a[5], 0, 1, font=font)\n",
     "plt.figure(figsize=(20, 20))\n",
     "plt.imshow(o)"
    ]
@@ -234,8 +234,8 @@
    "source": [
     "%%time\n",
     "num_t = nd2.sizes[\"t\"]\n",
-    "#scale = [80,40,20,10,5,1]#it.repeat(80)\n",
-    "scale = np.geomspace(80, 0.4, 100)\n",
+    "scale = [80,40,20,10,5,1]#it.repeat(80)\n",
+    "#scale = np.geomspace(80, 0.4, 100)\n",
     "# scale = it.repeat(0.1)\n",
     "# scale = it.repeat(0.4)\n",
     "# scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
@@ -253,7 +253,7 @@
     "    offset=offset,\n",
     "    channels=default_channels,\n",
     "    channel_to_color=channel_to_color,\n",
-    "    overlay_func=partial(square_overlay, unit_scale=80, unit_width=0.5, font=font),\n",
+    "    #overlay_func=partial(square_overlay, unit_scale=80, unit_width=0.5, font=font),\n",
     "    delayed=True,\n",
     ")"
    ]
