[shenker/image_analysis,image_analysis] WIP mosaic animation. Replaced Gaussian blur-based antialiasing with opencv's INTER_AREA resizing before transforming. Also switched from skimage.transform.warp to cv2.warpAffine.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220909 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220909 Mosaic animation.ipynb
@@ -154,7 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(20)"
+    "cluster.scale(50)"
    ]
   },
   {
@@ -216,14 +216,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "o = mosaic.square_overlay(a[5], 0, 1, font=font)\n",
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(o)"
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1024 * 0.15"
    ]
   },
   {
@@ -234,17 +239,20 @@
    "source": [
     "%%time\n",
     "num_t = nd2.sizes[\"t\"]\n",
-    "scale = [80,40,20,10,5,1]#it.repeat(80)\n",
-    "#scale = np.geomspace(80, 0.4, 100)\n",
+    "# scale = [80,40,20,10,5,1]#it.repeat(80)\n",
+    "#scale = np.geomspace(80, 0.1, 300)\n",
+    "#scale = np.geomspace(0.2, 0.1, 30)\n",
+    "#scale = [0.15]\n",
+    "scale = [0.333]\n",
     "# scale = it.repeat(0.1)\n",
     "# scale = it.repeat(0.4)\n",
     "# scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
     "# timepoints = range(0, 119, 30)\n",
     "# timepoints = range(0, 110, 10)#[20,40,60]\n",
-    "timepoints = it.repeat(20)#[20]  # [20,40,60,80]\n",
+    "timepoints = it.repeat(60)  # [20]  # [20,40,60,80]\n",
     "# timepoints = range(num_t)\n",
     "# timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
-    "offset = np.array([604, 354])\n",
+    "offset = [0,0]#np.array([604, 354])\n",
     "animation_delayed = mosaic.mosaic_animate_scale(\n",
     "    nd2_filename,\n",
     "    scale,\n",
@@ -253,7 +261,16 @@
     "    offset=offset,\n",
     "    channels=default_channels,\n",
     "    channel_to_color=channel_to_color,\n",
-    "    #overlay_func=partial(square_overlay, unit_scale=80, unit_width=0.5, font=font),\n",
+    "    overlay_func=partial(\n",
+    "        mosaic.square_overlay,\n",
+    "        min_scale=80,\n",
+    "        min_n=0,\n",
+    "        min_width=0.5,\n",
+    "        max_scale=0.1,\n",
+    "        max_n=5,\n",
+    "        max_width=0.9,\n",
+    "        font=font,\n",
+    "    ),\n",
     "    delayed=True,\n",
     ")"
    ]
@@ -275,7 +292,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[9])"
+    "plt.imshow(a[0])"
    ]
   },
   {
@@ -284,14 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.new(\"RGBA\", (1024, 1024), (0, 0, 0, 255))\n",
-    "\n",
-    "fnt = ImageFont.truetype(\"fira/FiraSans-Medium.ttf\", 80)\n",
-    "d = ImageDraw.Draw(img)\n",
-    "\n",
-    "d.text((120, 900), \"1 cell\", font=fnt, fill=(255, 255, 255, 0))\n",
-    "d.rectangle([(100, 100), (1000, 1000)], outline=(255, 255, 255, 0), width=5)\n",
-    "plt.imshow(np.asarray(img))"
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0])"
    ]
   },
   {
@@ -300,9 +311,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.fromarray(a[0], mode=\"F\")\n",
-    "draw = ImageDraw.Draw(img)\n",
-    "draw.line((0, 0) + im.size, fill=128)"
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skimage.transform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = skimage.transform.SimilarityTransform(scale=0.5, translation=(10,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linalg.inv(x.params)[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.invert(x.params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.params[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv2.warpAffine?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(a[0])"
    ]
   },
   {
@@ -332,24 +406,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.retry([a for a in animation_future if a.status == \"error\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.gather([a for a in animation_future if a.status == \"error\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plt.figure(figsize=(20, 20))\n",
     "plt.imshow(a[0])"
    ]
@@ -362,7 +418,9 @@
    "source": [
     "%%time\n",
     "mosaic.export_video(\n",
-    "    a, \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoomtest_1.mp4\", fps=10\n",
+    "    a,\n",
+    "    \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoom.mp4\",\n",
+    "    fps=10,\n",
     ")"
    ]
   },
