--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220911 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220911 Mosaic animation.ipynb
@@ -219,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img.shape"
+    "from skimage.transform import SimilarityTransform, warp"
    ]
   },
   {
@@ -228,7 +228,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "1024 * 0.15"
+    "SimilarityTransform(\n",
+    "        scale=5\n",
+    ") + SimilarityTransform(translation=(10, 20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SimilarityTransform(translation=(10, 20)) + SimilarityTransform(\n",
+    "        scale=5\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_img = nd2.get_frame_2D(c=1, v=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_dims = (1024, 2048)\n",
+    "input_dims = input_img.shape[::-1]\n",
+    "scale = 0.3333\n",
+    "nput_scale = mosaic.fit_output_transform(\n",
+    "        *input_dims, output_dims[0] * scale, output_dims[1] * scale\n",
+    "    )\n",
+    "rescaled_input_dims = np.ceil(np.array(input_dims) * input_scale).astype(np.int_)\n",
+    "input_img2 = cv2.resize(input_img, rescaled_input_dims, interpolation=cv2.INTER_AREA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "center_x = 0\n",
+    "center_y = 0\n",
+    "output_corner_x = 100\n",
+    "output_corner_y = 100\n",
+    "# transform = (\n",
+    "#         # fit_output_transform(input_width, input_height, output_width, output_height)\n",
+    "#         # + scale_around_center(1 / scale, (input_width / 2, input_height / 2))\n",
+    "#         SimilarityTransform(\n",
+    "#             translation=(\n",
+    "#                 center_x - input_dims[0] / 2,\n",
+    "#                 center_y - input_dims[1] / 2,\n",
+    "#             )\n",
+    "#         )\n",
+    "#         + SimilarityTransform(translation=(output_corner_x, output_corner_y))\n",
+    "#     )\n",
+    "\n",
+    "transform = SimilarityTransform(translation=translation)\n",
+    "\n",
+    "out = warp(input_img2, transform, output_shape=output_dims[::-1], order=1)\n",
+    "plt.imshow(out)"
    ]
   },
   {
@@ -242,8 +308,8 @@
     "# scale = [80,40,20,10,5,1]#it.repeat(80)\n",
     "#scale = np.geomspace(80, 0.1, 300)\n",
     "#scale = np.geomspace(0.2, 0.1, 30)\n",
-    "#scale = [0.15]\n",
-    "scale = [0.333]\n",
+    "scale = [0.15]\n",
+    "#scale = [0.333]\n",
     "# scale = it.repeat(0.1)\n",
     "# scale = it.repeat(0.4)\n",
     "# scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
@@ -281,7 +347,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%%pyinstrument\n",
+    "%%time\n",
     "a = dask.compute(animation_delayed, scheduler=\"sync\")[0]"
    ]
   },
@@ -293,80 +359,6 @@
    "source": [
     "plt.figure(figsize=(20, 20))\n",
     "plt.imshow(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import skimage.transform"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = skimage.transform.SimilarityTransform(scale=0.5, translation=(10,10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.linalg.inv(x.params)[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.invert(x.params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x.params[:2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.warpAffine?"
    ]
   },
   {
@@ -407,7 +399,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0])"
+    "plt.imshow(a[1])"
    ]
   },
   {
@@ -419,7 +411,7 @@
     "%%time\n",
     "mosaic.export_video(\n",
     "    a,\n",
-    "    \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoom.mp4\",\n",
+    "    \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoomtest_2.mp4\",\n",
     "    fps=10,\n",
     ")"
    ]
