[shenker/image_analysis,image_analysis] Mosaic animation with powers-of-ten overlay works. Text scaling is jerky because Pillow only allows rendering text with integer pixel sizes.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/220911 Mosaic animation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/220911 Mosaic animation.ipynb
@@ -219,96 +219,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skimage.transform import SimilarityTransform, warp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SimilarityTransform(\n",
-    "        scale=5\n",
-    ") + SimilarityTransform(translation=(10, 20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SimilarityTransform(translation=(10, 20)) + SimilarityTransform(\n",
-    "        scale=5\n",
-    "    )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_img = nd2.get_frame_2D(c=1, v=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dims = (1024, 2048)\n",
-    "input_dims = input_img.shape[::-1]\n",
-    "scale = 0.3333\n",
-    "nput_scale = mosaic.fit_output_transform(\n",
-    "        *input_dims, output_dims[0] * scale, output_dims[1] * scale\n",
-    "    )\n",
-    "rescaled_input_dims = np.ceil(np.array(input_dims) * input_scale).astype(np.int_)\n",
-    "input_img2 = cv2.resize(input_img, rescaled_input_dims, interpolation=cv2.INTER_AREA)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "center_x = 0\n",
-    "center_y = 0\n",
-    "output_corner_x = 100\n",
-    "output_corner_y = 100\n",
-    "# transform = (\n",
-    "#         # fit_output_transform(input_width, input_height, output_width, output_height)\n",
-    "#         # + scale_around_center(1 / scale, (input_width / 2, input_height / 2))\n",
-    "#         SimilarityTransform(\n",
-    "#             translation=(\n",
-    "#                 center_x - input_dims[0] / 2,\n",
-    "#                 center_y - input_dims[1] / 2,\n",
-    "#             )\n",
-    "#         )\n",
-    "#         + SimilarityTransform(translation=(output_corner_x, output_corner_y))\n",
-    "#     )\n",
-    "\n",
-    "transform = SimilarityTransform(translation=translation)\n",
-    "\n",
-    "out = warp(input_img2, transform, output_shape=output_dims[::-1], order=1)\n",
-    "plt.imshow(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "num_t = nd2.sizes[\"t\"]\n",
     "# scale = [80,40,20,10,5,1]#it.repeat(80)\n",
-    "#scale = np.geomspace(80, 0.1, 300)\n",
-    "#scale = np.geomspace(0.2, 0.1, 30)\n",
-    "scale = [0.15]\n",
+    "#scale = np.geomspace(80, 0.1, 900)\n",
+    "scale = np.geomspace(0.5, 0.1, 60)\n",
+    "#scale = [0.15]\n",
     "#scale = [0.333]\n",
     "# scale = it.repeat(0.1)\n",
     "# scale = it.repeat(0.4)\n",
@@ -367,16 +283,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "# animation_future = client.compute(animation_delayed)\n",
     "animation_future = [client.compute(a) for a in tqdm(animation_delayed)]"
@@ -399,7 +305,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(a[1])"
+    "plt.imshow(a[0])"
    ]
   },
   {
@@ -411,7 +317,7 @@
     "%%time\n",
     "mosaic.export_video(\n",
     "    a,\n",
-    "    \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoomtest_2.mp4\",\n",
+    "    \"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/timelapse_zoomtest_4.mp4\",\n",
     "    fps=10,\n",
     ")"
    ]
